@@ -259,17 +259,7 @@ void ScreenTitleMenu::HandleScreenMessage( const ScreenMessage SM )
 
 				if( RandomFloat(0,1)>0.8f )
 					GAMESTATE->m_PlayerOptions[p].m_fArrowScrollSpeed = 1.5f;
-
-				/* This is a bitfield; choose a bit. 1<<0 chooses the first
-				 * option, 1<<1 the second, and so on.  NUM_EFFECT_TYPES is one
-				 * greater than the number of options (since it includes NONE);
-				 * we'll actually NONE if we choose NUM_EFFECT_TYPES, since that'll
-				 * do 1<<(NUM_EFFECT_TYPES-1), which will turn on a bit that doesn't
-				 * do anything.
-				 * 
-				 * It's simple, but it's a hack.  FIXME -glenn */
-
-				GAMESTATE->m_PlayerOptions[p].m_bEffects[ rand()%NUM_EFFECT_TYPES ] = true;
+				GAMESTATE->m_PlayerOptions[p].m_bEffects[ rand()%PlayerOptions::NUM_EFFECT_TYPES ] = true;
 				if( RandomFloat(0,1)>0.9f )
 					GAMESTATE->m_PlayerOptions[p].m_AppearanceType = PlayerOptions::APPEARANCE_HIDDEN;
 				if( RandomFloat(0,1)>0.9f )
@@ -281,7 +271,7 @@ void ScreenTitleMenu::HandleScreenMessage( const ScreenMessage SM )
 			}
 			GAMESTATE->m_SongOptions.m_LifeType = (randomf(0,1)>0.7f) ? SongOptions::LIFE_BATTERY : SongOptions::LIFE_BAR;
 			GAMESTATE->m_SongOptions.m_FailType = SongOptions::FAIL_OFF;
-
+		
 			GAMESTATE->m_bDemonstration = true;
 			m_Fade.CloseWipingRight( SM_GoToDemonstration );
 		}
